Fix gradient color on safari mobile

--- a/Minimal/css/style.less
+++ b/Minimal/css/style.less
@@ -1136,7 +1136,7 @@ h1 + .breadcrumb {
 		}
 
 		&:after {
-			#gradient > .horizontal(transparent; #fff);
+			#gradient > .horizontal(rgba(255, 255, 255, 0); #fff);
 			position: absolute;
 			right: 0;
 			bottom: 0;
@@ -1150,6 +1150,9 @@ h1 + .breadcrumb {
 	& + footer {
 		display: none;
 	}
+}
+.table-cart-responsive {
+	background-color: #fff;
 }
 
 .table-cart {
